# libkuksa-cpp

./: CLAUDE.md  CMakeLists.txt  IMPROVEMENTS.md  README.md  REFACTORING_STATUS.md  STREAMING_PUBLISH_TASK.md  TESTING.md  USAGE.md  VSS_TYPES_REFACTORING.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  door_example.cpp  subscriber_wait_example.cpp  unified_client_simple.cpp  vehicle_example.cpp
examples/climate_control/: README.md  climate_control.cpp  climate_control.hpp  climate_protection_state_machine.hpp  engine_management_state_machine.hpp  main.cpp  vss_extensions.json
examples/standalone_test_runner/: CMakeLists.txt  README.md  main.cpp
include/kuksa_cpp/: client.hpp  connection_state_machine.hpp  error.hpp  kuksa.hpp  resolver.hpp  signal_set.hpp  type_mapping.hpp  types.hpp
include/kuksa_cpp/state_machine/: hierarchical_state_machine.hpp  state_definition.hpp  state_machine.hpp  transition.hpp
include/kuksa_cpp/testing/: gtest_integration.hpp  kuksa_client_wrapper.hpp  test_models.hpp  test_runner.hpp  test_utils.hpp  yaml_parser.hpp
src/state_machine/: hierarchical_state_machine.cpp  state_machine.cpp
src/testing/: gtest_integration.cpp  kuksa_client_wrapper.cpp  test_runner.cpp  test_utils.cpp  yaml_parser.cpp
src/vss/: resolver.cpp  vss_client.cpp  vss_types.cpp
tests/: CMakeLists.txt  test_accessor_handle_creation.cpp  test_all_vss_types.cpp  test_hierarchical.cpp  test_state_machine.cpp  test_testing_framework.cpp  test_transitions.cpp
tests/integration/: CMakeLists.txt  README.md  README_CLIMATE_CONTROL_TEST.md  kuksa_test_fixture.hpp  test_accessor_pattern.cpp  test_actuator_owner_handle_integration.cpp  test_all_types_integration.cpp  test_climate_control_integration.cpp  test_kuksa_communication.cpp  test_streaming_batch_publish.cpp  test_testing_library_integration.cpp  test_unified_client_integration.cpp
tests/integration/yaml/: climate_control_battery_protection.yaml
utils/: CMakeLists.txt  kuksa_logger.cpp
